--- a/vuetify-material-dashboard-master/package.json
+++ b/vuetify-material-dashboard-master/package.json
@@ -32,6 +32,7 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-config-vuetify": "^0.4.1",
     "eslint-plugin-vue": "^6.1.2",
     "sass": "^1.24.3",
