--- a/VueApi/src/main/resources/application.properties
+++ b/VueApi/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.servlet.context-path=/vue
 server.port=9999
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/happyvue?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/happyhouse?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=ssafy
-spring.datasource.password=ssafy
+spring.datasource.password=zcx13213
 
 logging.level.root=WARN
 logging.level.com.ssafy.vue.mappers=TRACE
